<resources>

    <string name="app_name">AquaButton</string>

    <string name="vtuber_name" translatable="false">湊あくあ</string>
    <string name="vtuber_url" translatable="false">https://www.hololive.tv/portfolio/items/336383</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="search_hint">Keyword</string>
    <string name="search_result_title">Result for keyword \"%s\"</string>
    <string name="tips_input_search_keyword">Please input keyword to search.</string>
    <string name="tips_op_requires_load">This operation requires finishing loading data.</string>
    <string name="tips_failed_to_play">Failed to play voice.</string>
    <string name="tips_failed_to_download">Failed to download voice.</string>
    <string name="choose_category_title">Choose category</string>
    <string name="action_shuffle">I\'m feeling lucky</string>
    <string name="tips_shuffle_result">Lucky voice: %s - %s</string>
    <string name="action_stop">Stop</string>
    <string name="action_save_to">Save to…</string>
    <string name="tips_voice_saving">Voice is downloading…</string>
    <string name="tips_voice_saved">Voice is successfully saved to %s</string>
    <string name="action_share">Share</string>
    <string name="share_to_title">Share to…</string>
    <string name="os_cannot_save_title">Your OS is unsupported</string>
    <string name="os_cannot_save_message"><![CDATA[
    Cannot launch create documents dialog which should be included in Android OS. Please contact
    your manufacturer for help.
    ]]></string>
    <string name="no_result_text"><![CDATA[
    No result. You can contribute extra voices of Minato Aqua and improve voices description
    translation on GitHub. Tap to open voice source repository.
    ]]></string>
    <string name="missing_voices_text"><![CDATA[
    Cannot find voices you want? You can contribute extra voices of Minato Aqua and
    improve voices description translation on GitHub. Tap to open voice source repository.
    ]]></string>
    <string name="action_licenses">Licenses</string>
    <string name="licenses_open_source_licenses">Open source software licenses</string>
    <string name="licenses_open_source_licenses_summary"><![CDATA[
    Thanks for the contributions of these projects.
    ]]></string>
    <string name="licenses_voice_source">Voices source of Minato Aqua</string>
    <string name="licenses_voice_source_summary">© Cover Corp. / Hololive production</string>
    <string name="licenses_holo_terms_url" translatable="false">https://www.hololive.tv/terms</string>
    <string name="licenses_material_sound">Material Design Sound resources</string>
    <string name="licenses_material_sound_summary"><![CDATA[
    Produced by Google. Available under CC-BY 4.0
    ]]></string>
    <string name="licenses_material_sound_url" translatable="false">https://material.io/design/sound/sound-resources.html</string>
    <string name="subscribe_button">Subscribe %s</string>
    <string name="user_interface_title">User interface</string>
    <string name="ui_sound_enabled_title">Enabled interface sound</string>
    <string name="ui_sound_enabled_summary"><![CDATA[
    Interface sound will not be played when phone is in silent mode.
    ]]></string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="dark_mode_follow_system">Follow system</string>
    <string name="dark_mode_force_on">Always on</string>
    <string name="dark_mode_force_off">Always off</string>
    <string name="library_resources_title">Library &amp; Resources</string>
    <string name="original_project_title">Original project</string>
    <string name="original_project_name" translatable="false">zyzsdy/aqua-button</string>
    <string name="original_project_summary"><![CDATA[
    Aqua Button browser-side version. We use voice assets from this project.
    You can contribute extra voices to this project.
    ]]></string>
    <string name="original_project_url" translatable="false">https://github.com/zyzsdy/aqua-button</string>
    <string name="load_failed_text">Failed to load data</string>
    <string name="load_failed_retry_button">Retry</string>
    <string name="storage_title">Storage</string>
    <string name="clear_voice_cache_title">Clear voice cache</string>
    <string name="clear_voice_cache_summary">Total size: %s</string>
    <string name="placeholder_calculating">Calculating…</string>
    <string name="tips_clear_cache_format">Successfully cleared %s data.</string>

    <string name="aqua_button_licenses_category">Project Licenses</string>
    <string name="aqua_button_licenses_program_title">Source code</string>
    <string name="aqua_button_licenses_program_summary"><![CDATA[
    © GitHub:MinatoAquaCrew 2020 / Available under GPL v3
    ]]></string>
    <string name="aqua_button_licenses_program_url" translatable="false">https://github.com/MinatoAquaCrew/AquaButton-android</string>

</resources>