<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/user_interface_title">

        <SimpleMenuPreference
            android:key="dark_mode"
            android:title="@string/dark_mode_title"
            android:summary="%s"
            android:entries="@array/dark_mode_entries"
            android:entryValues="@array/dark_mode_entry_values"
            android:icon="@drawable/ic_dark_mode_24_primary_text"/>

        <SwitchPreference
            android:key="ui_sound_enabled"
            android:title="@string/ui_sound_enabled_title"
            android:summary="@string/ui_sound_enabled_summary"
            android:icon="@drawable/ic_volume_up_24_primary_text" />

    </PreferenceCategory>

</PreferenceScreen>